--- a/custom_components/nordpool_predict_fi/translations/sv.json
+++ b/custom_components/nordpool_predict_fi/translations/sv.json
@@ -57,6 +57,18 @@
       },
       "nordpool_predict_fi__cheapest_12h": {
         "name": "Billigaste 12h prisfönster"
+      },
+      "nordpool_predict_fi__price_now": {
+        "name": "Pris nu"
+      },
+      "nordpool_predict_fi__windpower_now": {
+        "name": "Vindkraft nu"
+      },
+      "nordpool_predict_fi__narration_fi": {
+        "name": "Berättelse (finska)"
+      },
+      "nordpool_predict_fi__narration_en": {
+        "name": "Berättelse (engelska)"
       }
     }
   }
