--- a/custom_components/nordpool_predict_fi/translations/en.json
+++ b/custom_components/nordpool_predict_fi/translations/en.json
@@ -7,17 +7,15 @@
         "description": "Display Nordpool Predict FI predictions in Home Assistant.",
         "data": {
           "base_url": "Base URL",
-          "update_interval": "Update interval (minutes)",
-          "include_windpower": "Load wind power data"
+          "update_interval": "Update interval (minutes)"
         }
       },
       "reconfigure": {
         "title": "Nordpool Predict FI",
-        "description": "Review connection details or toggle optional datasets.",
+        "description": "Review connection details or update settings.",
         "data": {
           "base_url": "Base URL",
-          "update_interval": "Update interval (minutes)",
-          "include_windpower": "Load wind power data"
+          "update_interval": "Update interval (minutes)"
         }
       }
     },
@@ -29,11 +27,10 @@
     "step": {
       "init": {
         "title": "Nordpool Predict FI options",
-        "description": "Adjust polling interval and optional datasets.",
+        "description": "Adjust polling interval or base URL.",
         "data": {
           "base_url": "Base URL",
-          "update_interval": "Update interval (minutes)",
-          "include_windpower": "Load wind power data"
+          "update_interval": "Update interval (minutes)"
         }
       }
     },
