--- a/custom_components/nordpool_predict_fi/translations/sv.json
+++ b/custom_components/nordpool_predict_fi/translations/sv.json
@@ -74,10 +74,10 @@
         "name": "Vindkraft nu"
       },
       "nordpool_predict_fi__narration_fi": {
-        "name": "Berättelse (finska)"
+        "name": "Narration (FI)"
       },
       "nordpool_predict_fi__narration_en": {
-        "name": "Berättelse (engelska)"
+        "name": "Narration (EN)"
       }
     }
   }
