feat: add extra fees configuration and number entity

--- a/custom_components/nordpool_predict_fi/translations/sv.json
+++ b/custom_components/nordpool_predict_fi/translations/sv.json
@@ -79,6 +79,11 @@
       "nordpool_predict_fi__narration_en": {
         "name": "Narration (EN)"
       }
+    },
+    "number": {
+      "nordpool_predict_fi__extra_fees": {
+        "name": "Extraavgift"
+      }
     }
   }
 }
