feat: add daily average price sensor

--- a/custom_components/nordpool_predict_fi/translations/en.json
+++ b/custom_components/nordpool_predict_fi/translations/en.json
@@ -58,6 +58,9 @@
       "nordpool_predict_fi__price_now": {
         "name": "Price Now"
       },
+      "nordpool_predict_fi__price_daily_average": {
+        "name": "Daily Average Price"
+      },
       "nordpool_predict_fi__price_next_1h": {
         "name": "Average Price Next 1h"
       },
