--- a/custom_components/nordpool_predict_fi/translations/en.json
+++ b/custom_components/nordpool_predict_fi/translations/en.json
@@ -55,6 +55,12 @@
       "nordpool_predict_fi__cheapest_12h": {
         "name": "Cheapest 12h Price Window"
       },
+      "nordpool_predict_fi__cheapest_custom": {
+        "name": "Cheapest Custom Price Window"
+      },
+      "nordpool_predict_fi__cheapest_custom_active": {
+        "name": "Cheapest Custom Window Active"
+      },
       "nordpool_predict_fi__price_now": {
         "name": "Price Now"
       },
@@ -86,6 +92,15 @@
     "number": {
       "nordpool_predict_fi__extra_fees": {
         "name": "Extra Fees"
+      },
+      "nordpool_predict_fi__custom_window_hours": {
+        "name": "Custom Window Hours"
+      },
+      "nordpool_predict_fi__custom_window_start_hour": {
+        "name": "Custom Window Start Hour"
+      },
+      "nordpool_predict_fi__custom_window_end_hour": {
+        "name": "Custom Window End Hour"
       }
     }
   }
