--- a/custom_components/nordpool_predict_fi/translations/fi.json
+++ b/custom_components/nordpool_predict_fi/translations/fi.json
@@ -101,6 +101,9 @@
       },
       "nordpool_predict_fi__custom_window_end_hour": {
         "name": "Oman jakson lopputunti"
+      },
+      "nordpool_predict_fi__custom_window_lookahead_hours": {
+        "name": "Oman jakson ennakkotunnit"
       }
     }
   }
