--- a/custom_components/nordpool_predict_fi/translations/sv.json
+++ b/custom_components/nordpool_predict_fi/translations/sv.json
@@ -97,13 +97,19 @@
         "name": "Anpassat fönster starttimme"
       },
       "nordpool_predict_fi__custom_window_end_hour": {
-        "name": "Anpassat fönster sluttimme"
+        "name": "Anpassat fönsters sista timme"
       },
       "nordpool_predict_fi__custom_window_lookahead_hours": {
         "name": "Anpassat fönster framåttimmar"
       },
       "nordpool_predict_fi__cheapest_window_lookahead_hours": {
         "name": "Billigaste fönster framåttimmar"
+      },
+      "nordpool_predict_fi__cheapest_window_start_hour": {
+        "name": "Billigaste fönster starttimme"
+      },
+      "nordpool_predict_fi__cheapest_window_end_hour": {
+        "name": "Billigaste fönstrets sista timme"
       }
     }
   }
