--- a/custom_components/nordpool_predict_fi/translations/en.json
+++ b/custom_components/nordpool_predict_fi/translations/en.json
@@ -100,13 +100,19 @@
         "name": "Custom Window Start Hour"
       },
       "nordpool_predict_fi__custom_window_end_hour": {
-        "name": "Custom Window End Hour"
+        "name": "Custom Window Last Hour"
       },
       "nordpool_predict_fi__custom_window_lookahead_hours": {
         "name": "Custom Window Lookahead Hours"
       },
       "nordpool_predict_fi__cheapest_window_lookahead_hours": {
         "name": "Cheapest Window Lookahead Hours"
+      },
+      "nordpool_predict_fi__cheapest_window_start_hour": {
+        "name": "Cheapest Window Start Hour"
+      },
+      "nordpool_predict_fi__cheapest_window_end_hour": {
+        "name": "Cheapest Window Last Hour"
       }
     }
   }
